# Advance-RAG-and-Agentic-RAG

./: README.md
01_Document_Loaders/: main.py  pyproject.toml  requirements.txt
01_Document_Loaders/notebook/: json_loader.ipynb  text_loader.ipynb  web_loader.ipynb
02_Text_Splitters/: main.py  pyproject.toml
02_Text_Splitters/notebook/: character_text_splitter.ipynb  document_text_splitter.ipynb  llm_text_splitter.ipynb  recursive_text_splitter.ipynb  semantic_text_splitter.ipynb
03_Embeddings/: main.py  pyproject.toml
03_Embeddings/notebook/: open_source_embeddings.ipynb
04_Vector_Stores/: main.py  pyproject.toml  requirements.txt
05_Retrievers/: main.py  pyproject.toml
05_Retrievers/notebook/: 01_similarity_search.ipynb  02_similarity_search_threshold.ipynb  03_mmr.ipynb  04_bm25.ipynb  05_hybrid_search.ipynb
06_Advance_Retrievers/: main.py  pyproject.toml  requirements.txt
06_Advance_Retrievers/notebook/: contextual_compressor_retriever.ipynb  multi_query.ipynb  parent.ipynb  parent_document_retriever.ipynb  self_query.ipynb
06_Advance_Retrievers/notebook/local_parent_store/: 0da4eb47-cc6e-48c1-b025-28360808f8ff  2797f77c-9790-4dfa-b416-453436f9aecd  38b72cfe-09be-49ff-bc6c-d9829e09c187  5bb13f57-56d5-4557-be50-c1714b941d6f  7288eada-0d87-4001-9d33-6173cd9ad519  7ad9cf54-e052-4780-910b-03d9d7c7cfd7  977341f9-00d3-4b09-8ad7-c6051e76292f  a13a842b-09e0-488a-9890-ebdc19fb623a  a27f4821-9ce2-450c-a519-35bf60c1f3d9  c11a9c56-41a9-4ab8-92b0-b1cb84675cd3  dffa9aad-4165-4996-b933-5fb95521b51b
