[project]
name = "01-document-loaders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "jq>=1.11.0",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "lxml>=6.1.0",
    "pdfminer-six>=20251230",
    "pdfplumber>=0.11.9",
    "pypdf>=6.11.0",
    "pytesseract>=0.3.13",
    "rapidocr-onnxruntime>=1.4.4",
    "chardet>=5.2.0",
]
