[project]
name = "03-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
]
