[project]
name = "06-advance-retrievers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.1",
    "lark>=1.3.1",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]
